--- a/types/index.html
+++ b/types/index.html
@@ -1,7 +1,55 @@
 <!DOCTYPE html>
 <head>
-	<title>A website is never finished</title>
+	<title>Type</title>
+	<link rel="stylesheet" href="styles.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Tinos&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet"> 
 </head>
 <body>
-	<p>Please check back later.</p>
+	<main>
+		<h1>CODING</h1>
+		<p><em>Coding is basically the computer language used to develop apps, websites, and software. Without it, we'd have none of the most popular technology we've come to rely on such as Facebook, our smartphones, the browser we choose to view our favorite blogs, or even the blogs themselves. It all runs on code </p>
+
+		<p>We may not have reached into the future where we can travel in flying cars yet, but we have advanced leaps and bounds into a high-tech society. Nowadays, everything is computer-aided- from your alarm clock to your coffee machine to automated cars and even your home lights (Hi Alexa! Ok, Google!).
+
+None of these would have been possible without computers, and the language that runs them - is coding.
+
+Coding, in simpler terms, means feeding our commands in the computer in a language the computer understands, so that the computer can carry out the said command, and perform the task.
+
+It is, therefore, not an exaggeration to say that coding runs the future that we are living in the present.</span></p></em></p>
+
+			<h2><pre>
+                 K
+           N
+     O
+W
+  
+  L
+
+     E
+
+       D
+
+        G
+
+         E
+
+
+           I
+
+              S
+
+                 P
+                   O
+                     W
+                        E
+                           R
+
+
+   
+    </pre></h2>
+
+     <p><span class="art-class">First, solve the problem....</span></p>
+	</main>
 </body>
